# cross-border-fraud

./: .gitignore  LICENSE  README.md  build_injected_dataset.py  pyproject.toml  requirements.txt  run_all.py  run_category_headroom.py  run_external_validity.py  run_geo_control.py  run_glm_baseline.py  run_gnn_ring.py  run_gnn_snapshot.py  run_production_integration.py  run_robustness.py  run_ssm_selective.py  run_ssm_temporal.py  run_ssm_velocity.py
notebooks/: 01_eda.ipynb  02_label_engineering.ipynb  03_cda_contingency.ipynb  04_glm_binary_relevance.ipynb  05_log_linear.ipynb  06_gnn.ipynb  07_mamba.ipynb  08_benchmark.ipynb  09_mamba2_ssd_kaggle.ipynb
scripts/: 00_build_dataset.py  01_glm_baseline.py  02_model_benchmark.py  03_gnn_ring.py  04_ssm_temporal.py  05_ssm_velocity.py  06_ssm_selective.py  07_gnn_snapshot.py  08_category_headroom.py  09_geo_control.py  10_production_integration.py  11_robustness.py  12_external_validity.py  13_sequence_zoo.py  14_ssm_ablations.py  15_g3_replication.py
src/: adapters.py  benchmark.py  evaluation.py  external.py  features.py  inject.py  labels.py  robustness.py
src/models/: glm.py  gnn.py  sequence.py  ssm.py
tests/: conftest.py  test_adapters.py  test_glm_gate.py  test_gnn_cross.py  test_inject.py  test_sequence.py
