[project]
name = "cross-border-credit"
version = "0.1.0"
description = "Multi-label card fraud detection with GLM statistical core and neural feature-extraction extensions"
requires-python = ">=3.11"
license = { file = "LICENSE" }

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]
